--- a/cadastro.html
+++ b/cadastro.html
@@ -208,7 +208,7 @@
         </div>
     </nav>
 
-    <form action="../cadastro.php" method="post">
+    <form action="cadastro.php" method="post">
         <div class="form-group">
             <div class="container d-flex justify-content-center align-items-center geral">
                 <div class="container-fluid" id="box" style="padding-top: 16px; padding-bottom: 16px;">
@@ -244,7 +244,7 @@
             </div>
             <div class="d-flex justify-content-center">
                 <div>
-                    <button class="btn btn-primary btn-lg">Cadastrar</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Cadastrar</button>
                 </div>
             </div>
         </div>
