--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -37,7 +37,8 @@
         flex-direction: column;
         height: 78vh;
         width: 100vw;
-        /* margin-top: 18%; */
+        margin-top: 15%;
+        margin-bottom: 10%;
     }
 
     /* Bloco Text */
@@ -116,7 +117,7 @@
         <!-- Botão login -->
         <div class="welcome_botoes">
             <div>
-                <button class="botao_welcome" type="button" onclick="window.location.href = '/login.html'">Log in</button>
+                <button class="botao_welcome" type="button" onclick="window.location.href = '../login.html'">Log in</button>
             </div>
         </div>
     </div>
