--- a/pages/index.html
+++ b/pages/index.html
@@ -106,8 +106,8 @@
     <!-- Logos -->
     <section>
         <div class="logos">
-            <img class="logo1" src="../images/logo_noar.png">
-            <img class="logo2" src="../images/logo-bombeiros1.png">
+            <img class="logo1" src="../images/logo_noar.png" onclick="window.location.href = 'welcome.html'">
+            <img class="logo2" src="../images/logo-bombeiros1.png" onclick="window.location.href = 'welcome.html'">
         </div>
     </section>
     <!-- Carregando -->
