--- a/pages/históricocorrencia.html
+++ b/pages/históricocorrencia.html
@@ -183,7 +183,7 @@
 <body>
   <nav class="navbar navbar-dark" id="nav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
+      <a class="navbar-brand" href="homeadm.html"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
       <p class="navbar-title mt-3 fw-bold text">
         HISTÓRICO DE OCORRÊNCIA
       </p>
@@ -200,10 +200,10 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+              <a class="nav-link" aria-current="page" href="homeadm.html">TELA DE INÍCIO</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 CATEGORIAS
@@ -281,10 +281,10 @@
                   <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
                 </li>
               </ul>
-            </li>
+            </li> 
             <li class="nav-item" style="list-style-type: none">
               <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
-            </li>
+            </li>-->
             <li class="nav-item" style="list-style-type: none">
               <a class="nav-link" href="#">SAIR</a>
             </li>
