--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -120,7 +120,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-dark" id="nav">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../images/avatar_bombeiro.png" width="60px"></a>
+            <a class="navbar-brand" href="homeadm.html"><img src="../images/avatar_bombeiro.png" width="60px"></a>
             <p class="nav-title mt-3 fw-bold text">CADASTRO DO BOMBEIRO</p>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
@@ -136,9 +136,9 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                            <a class="nav-link" aria-current="page" href="homeadm.html">TELA DE INÍCIO</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 CATEGORIAS
@@ -195,10 +195,10 @@
                                 </li>
                                 <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
                             </ul>
-                        </li>
+                        </li> 
                         <li class="nav-item" style="list-style-type: none">
                             <a class="nav-link" href="#">PERFIL</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item" style="list-style-type: none">
                             <a class="nav-link" href="#">SAIR</a>
                         </li>
