vai da tudo certo

--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -372,9 +372,9 @@
                         </li>
                       </ul>
                     </li>
-                    <li class="nav-item" style="list-style-type: none">
+                    <!-- <li class="nav-item" style="list-style-type: none">
                       <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item" style="list-style-type: none">
                       <a class="nav-link" href="#">SAIR</a>
                     </li>
@@ -830,7 +830,7 @@
         <div class="espaço_botao">
             <div class="botao">
                 <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'sinais.html'">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'localizatraumas.html'">Proximo</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'loctromas.html'">Proximo</button>
             </div>
         </div>
     </div>
