--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -237,9 +237,9 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav-item" style="list-style-type: none">
+              <!-- <li class="nav-item" style="list-style-type: none">
                 <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
-              </li>
+              </li> -->
               <li class="nav-item" style="list-style-type: none">
                 <a class="nav-link" href="#">SAIR</a>
               </li>
