--- a/pages/situation.html
+++ b/pages/situation.html
@@ -156,10 +156,10 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                  <a class="nav-link" aria-current="page" href="home.html">TELA DE INÍCIO</a>
                 </li>
   
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     CATEGORIAS
@@ -237,10 +237,10 @@
                       <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
                     </li>
                   </ul>
-                </li>
+                </li> 
                 <li class="nav-item" style="list-style-type: none">
                   <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
-                </li>
+                </li> -->
                 <li class="nav-item" style="list-style-type: none">
                   <a class="nav-link" href="#">SAIR</a>
                 </li>
