--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -229,13 +229,13 @@
                     <br>
                     <label class="card-text mb-2">Gênero</label>
                     <br>
-                    <!-- <select class="form-select" name="genero" id="genero" name="genero"
+                    <select class="form-select" name="genero" id="genero" name="genero"
                         style="padding-left: 12px; padding-right: 12px; padding-top: 6px; padding-bottom: 6px;">
                         <option value="" disabled selected hidden></option>
                         <option value="masculino">Masculino</option>
                         <option value="feminino">Feminino</option>
                     </select>
-                    <br> -->
+                    <br>
                     <label class="card-text mb-2">Data de Nascimento</label>
                     <input type="text" id="dataNascimento" name="dataNascimento" class="form-control" oninput="mascaraData(this)"
                         maxlength="10"
