--- a/pages/login.html
+++ b/pages/login.html
@@ -112,10 +112,10 @@
 
                     <h1>LOGIN</h1>
                     <br>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+                    <input type="text" class="form-control" id="cpf" name="userCPF" placeholder="CPF">
                     <br>
                     <br>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Senha">
+                    <input type="password" class="form-control" id="senha" name="passwords" placeholder="Senha">
                     <br>
                     <button type="submit" class="btn btn-outline-primary btn-lg" name="submit-button" style="margin-top: 0.5rem;" href="/pages/home.html">Login</button>
             </div>
