--- a/cadastro.html
+++ b/cadastro.html
@@ -138,67 +138,6 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="homeadm.html">TELA DE INÍCIO</a>
                         </li>
-                        <!-- <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                CATEGORIAS
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
-                                        ENCONTRADOS SUSPEITOS</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">SINAIS E SINTOMAS</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">AVALIAÇÃO DO PACIENTE (GLASGOW)</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="loctromas.html">LOCALIZAÇÃO DOS TRAUMAS</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">SINAIS VITAIS</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">OBJETOS RECOLHIDOS</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">VÍTIMA ERA</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">PROCEDIMENTOS EFETUADOS</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">MATERIAIS UTILIZADOS</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">OBSERVAÇÕES IMPORTANTES</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
-                            </ul>
-                        </li> 
-                        <li class="nav-item" style="list-style-type: none">
-                            <a class="nav-link" href="#">PERFIL</a>
-                        </li> -->
                         <li class="nav-item" style="list-style-type: none">
                             <a class="nav-link" href="#">SAIR</a>
                         </li>
@@ -215,31 +154,15 @@
                     <label class="card-text mb-2">Nome Completo</label>
                     <input type="text" class="form-control" id="nome" name="nome" aria-describedby="name">
                     <br>
-                    <label class="card-text mb-2">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" aria-describedby="username">
+                    <label class="card-text mb-2">CPF</label>
+                    <input type="number" class="form-control" id="cpf" name="userCPF" aria-describedby="matricula">
                     <br>
                     <label class="card-text mb-2">Email</label>
                     <input type="email" class="form-control" id="email" name="email" aria-describedby="email">
                     <br>
                     <label class="card-text mb-2">Senha</label>
-                    <input type="password" class="form-control" id="senha" name="senha" aria-describedby="password">
+                    <input type="password" class="form-control" id="senha" name="passwords" aria-describedby="password">
                     <br>
-                    <label class="card-text mb-2">Matrícula</label>
-                    <input type="number" class="form-control" id="matricula" name="matricula" aria-describedby="matricula">
-                    <br>
-                    <label class="card-text mb-2">Gênero</label>
-                    <br>
-                    <select class="form-select" name="genero" id="genero" name="genero"
-                        style="padding-left: 12px; padding-right: 12px; padding-top: 6px; padding-bottom: 6px;">
-                        <option value="" disabled selected hidden></option>
-                        <option value="masculino">Masculino</option>
-                        <option value="feminino">Feminino</option>
-                    </select>
-                    <br>
-                    <label class="card-text mb-2">Data de Nascimento</label>
-                    <input type="text" id="dataNascimento" name="dataNascimento" class="form-control" oninput="mascaraData(this)"
-                        maxlength="10"
-                        style="padding-left: 12px; padding-right: 12px; padding-top: 6px; padding-bottom: 6px;">
                 </div>
             </div>
             <div class="d-flex justify-content-center">
@@ -249,21 +172,6 @@
             </div>
         </div>
     </form>
-
-    <script>
-        function mascaraData(input) {
-            var valor = input.value.replace(/\D/g, '');
-            if (valor.length <= 2) {
-                input.value = valor;
-            } else if (valor.length <= 4) {
-                input.value = valor.slice(0, 2) + '/' + valor.slice(2);
-            } else if (valor.length <= 8) {
-                input.value = valor.slice(0, 2) + '/' + valor.slice(2, 4) + '/' + valor.slice(4);
-            } else {
-                input.value = valor.slice(0, 2) + '/' + valor.slice(2, 4) + '/' + valor.slice(4, 8);
-            }
-        }
-    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
