--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -117,7 +117,7 @@
         <!-- Botão login -->
         <div class="welcome_botoes">
             <div>
-                <button class="botao_welcome" type="button" onclick="window.location.href = '../login.html'">Log in</button>
+                <button class="botao_welcome" type="button" onclick="window.location.href = 'login.html'">Log in</button>
             </div>
         </div>
     </div>
