--- a/pages/homeadm.html
+++ b/pages/homeadm.html
@@ -375,7 +375,7 @@
   var purplecard = document.getElementsByClassName('purplecard')[0];
 
   purplecard.addEventListener("click", function () {
-    window.location.href = "cadastro.html";
+    window.location.href = "cadastro.php";
   });
 </script>
 
