--- a/pages/home.html
+++ b/pages/home.html
@@ -48,7 +48,7 @@
 
         #row {
             height: 6%;
-            margin-top: 13%;
+            margin-top: 7%;
         }
 
         #fluid {
@@ -366,7 +366,7 @@
     var purplecard = document.getElementsByClassName('purplecard')[0];
 
     purplecard.addEventListener("click", function () {
-        window.location.href = "perfilbombeiro.html";
+        window.location.href = "telaperfil.php";
     });
 </script>
 
