--- a/pages/homeadm.html
+++ b/pages/homeadm.html
@@ -48,7 +48,7 @@
 
     #row {
       height: 6%;
-      margin-top: 13%;
+      margin-top: 7%;
     }
 
     #fluid {
@@ -330,7 +330,13 @@
                 <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
               </li> -->
               <li class="nav-item" style="list-style-type: none">
-                <a class="nav-link" href="#">SAIR</a>
+                <a class="nav-link" href="usuarios.php">VISUALIZAR USUÁRIOS</a>
+              </li>
+              <li class="nav-item" style="list-style-type: none">
+                <a class="nav-link" href="home2.html">ESPAÇO DOS BOMBEIROS</a>
+              </li>
+              <li class="nav-item" style="list-style-type: none">
+                <a class="nav-link" href="logout.php">SAIR</a>
               </li>
             </ul>
           </div>
