--- a/pages/loctromas.html
+++ b/pages/loctromas.html
@@ -236,7 +236,7 @@
             </select>
 
             <div class="row position-relative" id="imageContainer">
-                <img id="humanBody" src="/imagenslocalizartraumas/body.png" alt="body-image">
+                <img id="humanBody" src="../imagenslocalizartraumas/body.png" alt="body-image">
             </div>
             <!-- Buton to undo -->
             <div class="d-flex justify-content-center mt-4">
@@ -246,63 +246,63 @@
                 <div class="row cards">
                     <div class="col-md-12 d-flex gap-4">
                         <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/Amputacao.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Amputação">
+                            <img src="../imagenslocalizartraumas/Amputacao.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Amputação">
                             <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small">Amputação</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/Evisceracao.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Evisceracao">
+                            <img src="../imagenslocalizartraumas/Evisceracao.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Evisceracao">
                             <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small">Evisceração</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/FAB_FAF.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="FAB/FAF">
+                            <img src="../imagenslocalizartraumas/FAB_FAF.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="FAB/FAF">
                             <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small">FAB/FAF</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/Ferimentos_diversos.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Ferimentos diversos">
+                            <img src="../imagenslocalizartraumas/Ferimentos_diversos.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Ferimentos diversos">
                             <div class="card-body align-self-center d-flex align-items-center ">
                               <h5 class="card-title small text-center">Ferimentos diversos</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/Fratura_Luxacao_Entorse.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Fratura/Luxação/Entorse">
+                            <img src="../imagenslocalizartraumas/Fratura_Luxacao_Entorse.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Fratura/Luxação/Entorse">
                             <div class="card-body">
                               <h5 class="card-title small">Fratura/Luxação/Entorse</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/Hemorragia.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Hemorragia">
+                            <img src="../imagenslocalizartraumas/Hemorragia.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Hemorragia">
                             <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small">Hemorragia</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/Queimadura_1.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 1° grau">
+                            <img src="../imagenslocalizartraumas/Queimadura_1.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 1° grau">
                             <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small text-center">Queimadura 1° grau</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/Queimadura_2.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 2° grau">
+                            <img src="../imagenslocalizartraumas/Queimadura_2.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 2° grau">
                             <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small text-center">Queimadura 2° grau</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="/imagenslocalizartraumas/Queimadura_3.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 3° grau">
+                            <img src="../imagenslocalizartraumas/Queimadura_3.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 3° grau">
                             <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small text-center">Queimadura 3° grau</h5>
                             </div>
