--- a/pages/históricocorrencia.html
+++ b/pages/históricocorrencia.html
@@ -78,6 +78,8 @@
       position: relative;
       top: 10%;
       right: 0%;
+      background-color: #262626;
+      color: white;
     }
     .container {
   color: #eee;
@@ -98,7 +100,7 @@
 .month {
   width: 100%;
   height: 6rem;
-  background-color: #167e56;
+  background-color: #16362a;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -170,10 +172,19 @@
 }
 
 .today {
-  background-color: #167e56;
+  background-color: rgb(222, 149, 15);
 }
 .marked-date {
   background-color: rgb(89, 93, 104);
+}
+
+.accordion-body:focus{
+  box-shadow: transparent !important;
+}
+
+.accordion-button:not(.collapsed){
+  color: white;
+  background-color: #167e56;
 }
 
 
@@ -200,91 +211,8 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="homeadm.html">TELA DE INÍCIO</a>
+              <a class="nav-link" aria-current="page" href="homeadm.php">TELA DE INÍCIO</a>
             </li>
-
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                CATEGORIAS
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">TIPO DE OCORRÊNCIA</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'sinaisesintomas.html'">SINAIS E SINTOMAS</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'glasglow.html'">AVALIAÇÃO DO PACIENTE (GLASGOW)</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'loctromas.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'objetos.html'">OBJETOS RECOLHIDOS</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li><a class="dropdown-item" href="#" onclick="window.location.href = 'vitimaera.html'">VÍTIMA ERA</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'obsimportante.html'">OBSERVAÇÕES IMPORTANTES</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
-                </li>
-              </ul>
-            </li> 
-            <li class="nav-item" style="list-style-type: none">
-              <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
-            </li>-->
             <li class="nav-item" style="list-style-type: none">
               <a class="nav-link" href="logout.php">SAIR</a>
             </li>
@@ -661,18 +589,18 @@ const renderCalendar = () => {
   const nextDays = 7 - lastDayIndex - 1;
 
   const months = [
-    "January",
-    "February",
-    "March",
-    "April",
-    "May",
-    "June",
-    "July",
-    "August",
-    "September",
-    "October",
-    "November",
-    "December",
+    "Janeiro",
+    "Fevereiro",
+    "Março",
+    "Abril",
+    "Maio",
+    "Junho",
+    "Julho",
+    "Agosto",
+    "Setembro",
+    "Outubro",
+    "Novembro",
+    "Dezembro",
   ];
 
   document.querySelector(".date h1").innerHTML = months[date.getMonth()];
