alteração da cor dos text-lines

--- a/pages/anamnesemédica.html
+++ b/pages/anamnesemédica.html
@@ -63,7 +63,7 @@
       background: transparent;
       color: white;
       border: none;
-      border-bottom: 2px solid rgb(6, 108, 243);
+      border-bottom: 2px solid #167e56;
     }
 
     /*Desconstruindo o textarea*/
@@ -72,14 +72,14 @@
       color: white;
       border: none;
       text-align: center;
-      border-bottom: 2px solid rgb(6, 108, 243);
+      border-bottom: 2px solid #167e56;
       width: 10%;
     }
 
     /*Definindo o estilo do input quando estiver sob foco*/
     .form-control:focus {
       border-color: rgb(6, 108, 243);
-      box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
+      box-shadow: 0 0 0 0.1rem #167e56;
     }
 
     /* Definindo estilos dos botões do rodapé */
