--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -32,8 +32,8 @@
         }
 
         .form-control:focus {
-            border-color: rgb(6, 108, 243);
-            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
+            border-color: #167e56;
+            box-shadow: 0 0 0 0.1rem #167e56;
         }
 
         /* MENU */
@@ -48,8 +48,6 @@
 
         #box {
             background-color: #333333;
-            /* width: 50%; */
-            /* height: 52%; */
             border-radius: 10px;
         }
 
@@ -59,8 +57,6 @@
 
         .box2 {
             background-color: #333333;
-            /* width: 40%; */
-            /* height: 70%; */
             border-radius: 10px;
         }
 
@@ -68,21 +64,17 @@
             margin-bottom: 3rem !important;
         }
 
-        /*  */
         @media screen and (min-width: 200px) and (max-width:460px) {
 
             .navbar-title {
                 font-size: 13PX;
             }
-
         }
 
         @media screen and (min-width: 200px) and (max-width:405px) {
-
             .navbar-title {
                 font-size: 10.6PX;
             }
-
         }
     </style>
 </head>
