--- a/pages/cadastropaciente.html
+++ b/pages/cadastropaciente.html
@@ -35,8 +35,8 @@
         }
 
         .form-control:focus {
-            border-color: red;
-            box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
+            border-color: #167e56;
+            box-shadow: 0 0 0 0.2rem #167e56;
         }
 
         /* MENU */
