--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -81,7 +81,7 @@
     .sim_nao {
       width: 19%;
       background-color: #333333;
-      box-shadow: 0px 0px 15px #1E90FF;
+      box-shadow: 0px 0px 15px #167e56;
       border-radius: 5px;
       align-items: center;
       margin-right: 27px;
