--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -35,8 +35,8 @@
         }
 
         .form-control:focus {
-            border-color: red;
-            box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
+            border-color: #167e56;
+            box-shadow: 0 0 0 0.2rem #167e56;
         }
 
         /* MENU */
@@ -61,7 +61,7 @@
             background: transparent;
             color: white;
             border: none;
-            border-bottom: 2px solid rgb(6, 108, 243);
+            border-bottom: 2px solid #167e56;
         }
 
         .text-line-personality {
@@ -69,7 +69,7 @@
             color: white;
             border: none;
             text-align: center;
-            border-bottom: 2px solid rgb(6, 108, 243);
+            border-bottom: 2px solid #167e56;
             width: 10%;
         }
         .espaço_botao {
