--- a/pages/objetos.html
+++ b/pages/objetos.html
@@ -76,8 +76,8 @@
         }
 
         .form-control:focus {
-            border-color: rgb(6, 108, 243);
-            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
+            border-color: #167e56;
+            box-shadow: 0 0 0 0.1rem #167e56;
         }
     </style>
 </head>
