--- a/pages/obsimportante.html
+++ b/pages/obsimportante.html
@@ -2,247 +2,256 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset=UTF-8>
-    <!-- Linkagem -->
-    <title>OBSERVAÇÕES IMPORTANTES</title>
-    <!-- Titulo -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300&display=swap">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- Fonte -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width">
-    <!-- media -->
-    <link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
-    <!--Imagem icon-->
+  <meta charset=UTF-8>
+  <!-- Linkagem -->
+  <title>OBSERVAÇÕES IMPORTANTES</title>
+  <!-- Titulo -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- Fonte -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
+  <!-- media -->
+  <link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
+  <!--Imagem icon-->
 
-    <style>
-        /*Início do código CSS*/
+  <style>
+    /*Início do código CSS*/
 
-        /*Resetando estilos da página*/
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    /*Resetando estilos da página*/
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        /*Definindo fundo e tipo da fonte da página*/
-        body {
-            background-color: #c1c1c1;
-            font-family: 'Inter', sans-serif;
-            height: 100vh;
-            color: white;
-        }
+    /*Definindo fundo e tipo da fonte da página*/
+    body {
+      background-color: #c1c1c1;
+      font-family: 'Inter', sans-serif;
+      height: 100vh;
+      color: white;
+    }
 
-        /*Definindo cor da Navbar*/
-        /* MENU */
-        #nav {
-            background-color: #333333;
-        }
+    /*Definindo cor da Navbar*/
+    /* MENU */
+    #nav {
+      background-color: #333333;
+    }
 
-        .navbar-brand {
-            display: flex;
-            margin: 0px;
-        }
+    .navbar-brand {
+      display: flex;
+      margin: 0px;
+    }
 
-        /*Definindo cor dos cards*/
-        .card {
-            background-color: #333333;
-        }
+    /*Definindo cor dos cards*/
+    .card {
+      background-color: #333333;
+    }
 
-        /*Definindo cor da fonte da página*/
-        .text {
-            color: white;
-        }
+    /*Definindo cor da fonte da página*/
+    .text {
+      color: white;
+    }
 
-        /* Definindo estilos dos botões do rodapé */
-        .espaço_botao {
-            display: flex;
-            width: 100%;
-            height: 15vh;
-            justify-content: center;
-        }
+    /* Definindo estilos dos botões do rodapé */
+    .espaço_botao {
+      display: flex;
+      width: 100%;
+      height: 15vh;
+      justify-content: center;
+    }
 
-        .botao {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 90%;
-        }
+    .botao {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 90%;
+    }
 
-        .form-control:focus {
-            border-color: rgb(6, 108, 243);
-            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
-        }
+    .form-control:focus {
+      border-color: #167e56;
+      box-shadow: 0 0 0 0.1rem #167e56;
+    }
 
-        /* Tamanho titulo */
-        @media screen and (max-width:460px) {
+    /* Tamanho titulo */
+    @media screen and (max-width:460px) {
+      .navbar-title {
+        font-size: 13PX;
+      }
+    }
 
-            .navbar-title {
-                font-size: 13PX;
-            }
+    /* Tamanho titulo */
+    @media screen and (max-width:405px) {
 
-        }
-
-        /* Tamanho titulo */
-        @media screen and (max-width:405px) {
-
-            .navbar-title {
-                font-size: 10.6PX;
-            }
-
-        }
-    </style>
+      .navbar-title {
+        font-size: 10.6PX;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
-    <!-- container geral -->
-    <div class="container-fluid p-0 h-100">
+  <!-- container geral -->
+  <div class="container-fluid p-0 h-100">
 
-        <!-- navbar -->
-        <nav class="navbar navbar-dark" id="nav">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="home.html"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
-            <p class="navbar-title mt-3 fw-bold text">
-              OBSERVAÇÕES IMPORTANTES
-            </p>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-              aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-              aria-labelledby="offcanvasDarkNavbarLabel">
-              <div class="offcanvas-header">
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                  aria-label="Close"></button>
-              </div>
-              <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+    <!-- navbar -->
+    <nav class="navbar navbar-dark" id="nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="home.html"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
+        <p class="navbar-title mt-3 fw-bold text">
+          OBSERVAÇÕES IMPORTANTES
+        </p>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+          aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+          aria-labelledby="offcanvasDarkNavbarLabel">
+          <div class="offcanvas-header">
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+              aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  CATEGORIAS
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">TIPO DE
+                      OCORRÊNCIA</a>
                   </li>
-    
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                      aria-expanded="false">
-                      CATEGORIAS
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">TIPO DE OCORRÊNCIA</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'sinaisesintomas.html'">SINAIS E SINTOMAS</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'glasglow.html'">AVALIAÇÃO DO PACIENTE (GLASGOW)</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'loctromas.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a></li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'objetos.html'">OBJETOS RECOLHIDOS</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li><a class="dropdown-item" href="#" onclick="window.location.href = 'vitimaera.html'">VÍTIMA ERA</a></li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'obsimportante.html'">OBSERVAÇÕES IMPORTANTES</a>
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
-                      </li>
-                    </ul>
+                  <li>
+                    <hr class="dropdown-divider" />
                   </li>
-                  <!-- <li class="nav-item" style="list-style-type: none">
-                    <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
-                  </li> -->
-                  <li class="nav-item" style="list-style-type: none">
-                    <a class="nav-link" href="#">SAIR</a>
+                  <li>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces"
+                      onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'sinaisesintomas.html'">SINAIS E
+                      SINTOMAS</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'glasglow.html'">AVALIAÇÃO DO
+                      PACIENTE (GLASGOW)</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'loctromas.html'">LOCALIZAÇÃO DOS
+                      TRAUMAS</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'objetos.html'">OBJETOS
+                      RECOLHIDOS</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces"
+                      onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li><a class="dropdown-item" href="#" onclick="window.location.href = 'vitimaera.html'">VÍTIMA ERA</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      onclick="window.location.href = 'procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      onclick="window.location.href = 'materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'obsimportante.html'">OBSERVAÇÕES
+                      IMPORTANTES</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA
+                      CINEMÁTICA</a>
                   </li>
                 </ul>
-              </div>
+              </li>
+              <li class="nav-item" style="list-style-type: none">
+                <a class="nav-link" href="#">SAIR</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <form action="" class="h-100">
+      <div class="form-group h-100">
+        <div class="container d-flex align-items-center h-100">
+          <div class="container card h-75 w-75 p-3">
+            <div class="form-floating h-100">
+              <textarea class="form-control h-100" placeholder="Leave a comment here" id="floatingTextarea2"
+                style="height: 80%"></textarea>
+              <label for="floatingTextarea2">Observações</label>
             </div>
           </div>
-        </nav>
-<form action="" class="h-100">
-    <div class="form-group h-100">
-        <div class="container d-flex align-items-center h-100">
-            <div class="container card h-75 w-75 p-3">
-                <div class="form-floating h-100">
-                    <textarea class="form-control h-100" placeholder="Leave a comment here" id="floatingTextarea2"
-                        style="height: 80%"></textarea>
-                    <label for="floatingTextarea2">Observações</label>
-                </div>
-            </div>
         </div>
-    </div>   
-</form>
-        <!-- botoes do rodapé -->
-        <div class="espaço_botao">
-            <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'materiaisutilizados.html'">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'cadastropaciente.html'">Proximo</button>
-            </div>
-        </div>
+      </div>
+    </form>
+    <!-- botoes do rodapé -->
+    <div class="espaço_botao">
+      <div class="botao">
+        <button type="button" class="btn btn-outline-primary btn-lg"
+          onclick="window.location.href = 'materiaisutilizados.html'">Voltar</button>
+        <button type="button" class="btn btn-outline-primary btn-lg"
+          onclick="window.location.href = 'cadastropaciente.html'">Proximo</button>
+      </div>
     </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
 </body>
 
