--- a/pages/login.html
+++ b/pages/login.html
@@ -33,8 +33,8 @@
 
         .form-control:focus,
         .form-select:focus {
-            border-color: rgb(6, 108, 243);
-            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
+            border-color: #167e56;
+            box-shadow: 0 0 0 0.1rem #167e56;
         }
 
         #nav {
@@ -99,6 +99,17 @@
                 height: 90%;
 
             }
+        }
+
+        .btn-outline-primary{
+            color: #167e56;
+            border-color: #167e56;
+        }
+
+        .btn:hover{
+            color: white;
+            border-color: #167e56;
+            background-color: #167e56;
         }
     </style>
 </head>
