--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -120,6 +120,17 @@
       align-items: center;
       width: 90%;
     }
+
+    .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
   </style>
 </head>
 
@@ -357,7 +368,7 @@
       <button type="button" class="btn btn-outline-primary btn-lg"
         onclick="window.location.href = 'glasglow.html'">Voltar</button>
       <button type="button" class="btn btn-outline-primary btn-lg"
-        onclick="window.location.href = 'objetos.html'">Proximo</button>
+        onclick="window.location.href = 'objetos.html'">Próximo</button>
     </div>
   </div>
 
