--- a/pages/anamnesemédica.html
+++ b/pages/anamnesemédica.html
@@ -115,6 +115,7 @@
         width: 20%;
       }
     }
+
     /* Tamanho titulo */
     @media screen and (max-width:460px) {
 
@@ -123,6 +124,7 @@
       }
 
     }
+
     /* Tamanho titulo */
     @media screen and (max-width:405px) {
 
@@ -131,16 +133,16 @@
       }
     }
 
-    .btn-outline-primary{
-            color: #167e56;
-            border-color: #167e56;
-        }
+    .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
 
-        .btn:hover{
-            color: white;
-            border-color: #167e56;
-            background-color: #167e56;
-        }
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
   </style>
 </head>
 
@@ -177,75 +179,88 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">TIPO DE OCORRÊNCIA</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">TIPO DE
+                      OCORRÊNCIA</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces"
+                      onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'sinaisesintomas.html'">SINAIS E SINTOMAS</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'sinaisesintomas.html'">SINAIS E
+                      SINTOMAS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'glasglow.html'">AVALIAÇÃO DO PACIENTE (GLASGOW)</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'glasglow.html'">AVALIAÇÃO DO
+                      PACIENTE (GLASGOW)</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'loctromas.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'loctromas.html'">LOCALIZAÇÃO DOS
+                      TRAUMAS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a></li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'objetos.html'">OBJETOS RECOLHIDOS</a>
+                  <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li><a class="dropdown-item" href="#" onclick="window.location.href = 'vitimaera.html'">VÍTIMA ERA</a></li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'objetos.html'">OBJETOS
+                      RECOLHIDOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces"
+                      onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li><a class="dropdown-item" href="#" onclick="window.location.href = 'vitimaera.html'">VÍTIMA ERA</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'obsimportante.html'">OBSERVAÇÕES IMPORTANTES</a>
+                    <a class="dropdown-item" href="#"
+                      onclick="window.location.href = 'procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
+                    <a class="dropdown-item" href="#"
+                      onclick="window.location.href = 'materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'obsimportante.html'">OBSERVAÇÕES
+                      IMPORTANTES</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA
+                      CINEMÁTICA</a>
                   </li>
                 </ul>
               </li>
@@ -267,7 +282,7 @@
             <div class="card col-9 mt-5" style="padding: 16px">
               <label class="text">O QUE ACONTECEU (SINAIS E SINTOMAS)</label>
               <div class="form-floating">
-                <textarea class="form-control pt-2" id="sintomaTextarea"></textarea> 
+                <textarea class="form-control pt-2" id="sintomaTextarea"></textarea>
               </div>
             </div>
 
@@ -413,10 +428,12 @@
     <!-- botoes do rodapé -->
     <div class="espaço_botao">
       <div class="botao">
-        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'procedimentos.html'">
+        <button type="button" class="btn btn-outline-primary btn-lg"
+          onclick="window.location.href = 'procedimentos.html'">
           Voltar
         </button>
-        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'gestacional.html'">
+        <button type="button" class="btn btn-outline-primary btn-lg"
+          onclick="window.location.href = 'gestacional.html'">
           Próximo
         </button>
       </div>
