--- a/pages/materiaisutilizados.html
+++ b/pages/materiaisutilizados.html
@@ -769,9 +769,14 @@
     <div class="espaço_botao">
         <div class="botao">
             <button type="button" class="btn btn-outline-primary btn-lg"
-                onclick="window.location.href = 'cinematica.html'">Voltar</button>
-            <button type="button" class="btn btn-outline-primary btn-lg"
-                onclick="window.location.href = 'obsimportante.html'">Proximo</button>
+                onclick="window.location.href = 'procedimentos.html'">Voltar</button>
+
+        </div>
+    </div>
+
+      <div class="d-flex justify-content-center mt-5" id="botão">
+        <div>
+            <button class="btn btn-primary btn-lg" id="botao" onclick="window.location.href = 'home.html'">Salvar Ocorrência</button>
         </div>
     </div>
     </div>
