--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -431,7 +431,7 @@
         <div class="espaço_botao">
             <div class="botao">
                 <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'ocorrencia.html'">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'sinaisesintomas.html'">Proximo</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'problemasuspeitos.html'">Proximo</button>
             </div>
         </div>
     </div>
