--- a/pages/anamnesemédica.html
+++ b/pages/anamnesemédica.html
@@ -429,11 +429,11 @@
     <div class="espaço_botao">
       <div class="botao">
         <button type="button" class="btn btn-outline-primary btn-lg"
-          onclick="window.location.href = 'procedimentos.html'">
+          onclick="window.location.href = 'sinaisesintomas.html'">
           Voltar
         </button>
         <button type="button" class="btn btn-outline-primary btn-lg"
-          onclick="window.location.href = 'gestacional.html'">
+          onclick="window.location.href = 'procedimentos.html'">
           Próximo
         </button>
       </div>
