--- a/pages/cadastropaciente.html
+++ b/pages/cadastropaciente.html
@@ -375,7 +375,7 @@
         <button type="button" class="btn btn-outline-primary btn-lg"
           onclick="window.location.href = 'obsimportante.html'">Voltar</button>
         <button type="button" class="btn btn-outline-primary btn-lg"
-          onclick="window.location.href = 'equipedeatendimento.html'">Próximo</button>
+          onclick="window.location.href = 'vitimaera.html'">Próximo</button>
       </div>
     </div>
   </form>
