--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -405,7 +405,7 @@
         <button type="button" class="btn btn-outline-primary btn-lg"
           onclick="window.location.href = 'gestacional.html'">Voltar</button>
         <button type="button" class="btn btn-outline-primary btn-lg"
-          onclick="window.location.href = 'materiaisutilizados.html'">Próximo</button>
+          onclick="window.location.href = 'sinais.html'">Próximo</button>
       </div>
     </div>
     <script>
