--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -368,7 +368,7 @@
       <button type="button" class="btn btn-outline-primary btn-lg"
         onclick="window.location.href = 'glasglow.html'">Voltar</button>
       <button type="button" class="btn btn-outline-primary btn-lg"
-        onclick="window.location.href = 'objetos.html'">Próximo</button>
+        onclick="window.location.href = 'equipedeatendimento.html'">Próximo</button>
     </div>
   </div>
 
