--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -476,7 +476,7 @@
                     <div class="espaço_botao">
                         <div class="botao">
                             <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'vitimaera.html'">Voltar</button>
-                            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'sinais.html'">Proximo</button>
+                            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'cinematica.html'">Proximo</button>
                         </div>
                     </div>
                 </div>
