--- a/pages/procedimentos.html
+++ b/pages/procedimentos.html
@@ -734,8 +734,8 @@
     </form>
     <div class="espaço_botao">
       <div class="botao">
-        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'objetos.html'">Voltar</button>
-        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'anamnesemédica.html'">Proximo</button>
+        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'anamnesemédica.html'">Voltar</button>
+        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'materiaisutilizados.html'">Proximo</button>
       </div>
     </div>
   </div>
