--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -829,8 +829,8 @@
         <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'sinais.html'">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'loctromas.html'">Proximo</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'loctromas.html'">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'anamnesemédica.html'">Proximo</button>
             </div>
         </div>
     </div>
