--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -344,7 +344,7 @@
       <button type="button" class="btn btn-outline-primary btn-lg "
         onclick="window.location.href = 'situation.html'">Voltar</button>
       <button type="button" class="btn btn-outline-primary btn-lg"
-        onclick="window.location.href = 'ocorrencia.html'">Proximo</button>
+        onclick="window.location.href = 'conducao.html'">Proximo</button>
     </div>
   </div>
   </div>
